--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -20,9 +20,9 @@ pipeline {
         }
         stage('Deploy to Production'){
             steps{
-                timeout(time:5, unit:'DAYS'){
+                /*timeout(time:5, unit:'DAYS'){
                     input message:'Approve PRODUCTION Deployment?'
-                }
+                }*/
                 build job: 'Deploy-Application-Prod'
             }
         }
